# django-govbrds

./: hello.py  pyproject.toml
src/django_govbrds/: apps.py  core.py  css.py  html.py
src/django_govbrds/static/govbrds3/: package-lock.json  package.json
src/django_govbrds/templates/django_govbrds/: base.html  govbrds.html
src/django_govbrds/templates/govbrds/: base.html
src/django_govbrds/templatetags/: django_govbrds.py
