[project]
name = "django-govbrds"
dynamic = ["version"]
description = "Design System do Governo Federal Brasileiro projetos derivados do Django"
keywords = ["django", "govbrds"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    {name = "Voreios", email = "fabio@voreios.com.br"}
]
dependencies = [
  "Django>=4.2"
]

[project.urls]
Source = "https://github.com/roraimae/django-govbrds"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "./src/django_govbrds/__about__.py"